archive/v4/README.md
# 古墓不让进 — Web原型 V3（完整版）

依据策划案《古墓不让进2.0》开发的轻射击 PVE 搜打撤 RPG 原型。
TypeScript + Three.js，零 npm 依赖（Node 内置 TS 类型剥离构建）。

## 怎么玩

双击 `index.html`（需联网加载 Three.js CDN）。

- **自动前进**，遭遇敌人自动停下进入战斗（策划案4状态：移动/战斗/选择/搜索）
- **鼠标瞄准 + 左键射击**，爆头3倍伤害，弹夹12发，R/打空自动换弹
- **宝藏房**：点击箱子读条搜刮（金币/医疗/镇静剂/强化弹药/古董/珍宝）
- **岔路口**：每3间房二选一（显示房型情报）
- **祭坛**：自动获得随机赐福（伤害/生命/神智）
- **神智**：每进新房扣神智，归零强制撤离（保留战利品）
- **撤离点**：每10层一个 —— 撤离结算入金库，或继续深入（敌人更强收益更高）
- **死亡 = 丢失本局全部战利品**（搜打撤核心反馈）
- 微恐氛围：黑暗+手电筒+火把闪烁+低神智心跳与暗角

## 项目结构

```
src/
  input.ts    鼠标瞄准/点击/按键
  audio.ts    程序化音效（枪声为噪声合成）+ 暗黑环境音
  meta.ts     localStorage：金库/最深记录/撤离率
  loot.ts     战利品掉落表（深度加成）
  rooms.ts    房间生成器（战斗/宝藏/祭坛/回廊/撤离点，动态拼接回收）
  enemy.ts    丧尸（头/身分部位hitbox、近战、倒地动画）
  player.ts   越肩相机+手电+枪械（弹夹/换弹/后座/枪口火光）
  hud.ts      血条/神智/弹药/准星/命中标记/搜索条/岔路与撤离UI
  game.ts     单局状态机与全部接线
  main.ts     开始界面+金库展示
build.js / index.template.html / index.html（双击即玩）
VERSION_PLAN.md  三版本拆分计划
archive/         每版本备份
```

## 构建

```
node build.js   # 要求 Node ≥ 22.13
```

## 版本进度

- [x] V1 核心单局循环（本版）
- [x] V2 搜打撤决策强化（本版）
- [x] V3 章节/BOSS/军械库/助手/图鉴（本版）

## V2 新增
- 8格背包+品质（白/蓝/紫/金），满包"丢低换新"取舍对话
- 消耗品独立槽：1医疗 2镇静 3手雷（准星处AoE爆炸）
- 敌人：开膛手(快)/追踪者(远程弹幕)/再生者(重甲，身体减伤必须打头)/无形之子(半透明，近战扣神智)/巨人(精英)
- 安全屋检查点（下局可从深处出发）、精英房战前情报

## V3 新增
- 三章节主题：金字塔/玛雅神庙/秦陵地宫（30层一章，材质配色与剧情引导切换）
- 章节BOSS（沙之暴君/羽蛇祭司/青铜俑将）：半血暴怒，冲锋+腐蚀弹+召唤，掉章节圣物
- 军械库（金库消费）：霰弹枪解锁（Q切换双武器）、伤害改装、弹夹扩容
- 助手·夜枭：被动搜索+35%/每房回神智，主动群体电击（4键，每局3次）
- 收藏品图鉴：13种藏品收集进度（跨局持久化）

## V4 体验优化
- **竖屏适配**：9:16舞台居中渲染，宽屏两侧自动露出程序生成的砂岩象形纹（荷鲁斯之眼/安卡/水波/金字塔/圣甲虫浮雕贴片）；触屏按住即瞄准开火，可直接手机玩
- **石门仪式感**：每间房出口换成雕花双开石门——鎏金描边+符文浮雕门板、门柱+鎏金门楣+圣甲虫徽记，走近时石门伴随低频隆隆声缓缓滑入墙内
- **场景提亮**：环境光+半球补光增强、雾距13→46、每房火把2→4支且亮度提升
